Closed Bug 918330 Opened 12 years ago Closed 12 years ago

GfxInfoCollector.h should not include jsapi.h

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: bjacob, Assigned: bjacob)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached file don't include jsapi.h
Flagging ehsan since he discovered it, and this code is very weakly owned anyway.
Attachment #807197 - Flags: review?(ehsan)
Attachment #807197 - Flags: review?(ehsan) → review+
Nick, you'll like this! :-)
Blocks: includehell
Assignee: nobody → bjacob
Target Milestone: --- → mozilla27
> Nick, you'll like this! :-) Indeed! I just measured, it reduces the number of files built after jsapi.h is touched from 1510 to 1294 :)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: