Bug 918330 - GfxInfoCollector.h should not include jsapi.h - r=ehsan